--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ VITE_SITE_APPLE_LOGO = "/images/logo/logo.png" # Apple 端图标
 
 # 简介文本
 VITE_DESC_HELLO = "Hello World !"
-VITE_DESC_TEXT = "#（原）建筑结构设计师 #上位机仙人 #（看别人）游戏开发"
+VITE_DESC_TEXT = "# 上位机仙人\n#（原）建筑结构设计师\n# 手残游戏玩家\n#（幻想着）游戏开发"
 VITE_DESC_HELLO_OTHER = "Oops !"
 VITE_DESC_TEXT_OTHER = "哎呀，这都被你发现了（ 再点击一次可关闭 ）"
 
